ServiceMesh/mesh.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: microservices
  labels:
    app: service-a
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: service-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          # Change your account id
          image: 694448341573.dkr.ecr.ap-northeast-2.amazonaws.com/mesh-service-a:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: microservices
  labels:
    app: service-b
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: service-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          # Change your account id
          image: 694448341573.dkr.ecr.ap-northeast-2.amazonaws.com/mesh-service-b:latest
          ports:
            - containerPort: 8000
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: microservices-gateway
  namespace: microservices
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-a-vs
  namespace: microservices
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: service-a
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-b-vs
  namespace: microservices
spec:
  hosts:
    - service-b
  http:
    - route:
        - destination:
            host: service-b
            port:
              number: 80

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-a-dr
  namespace: microservices
spec:
  host: service-a
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-b-dr
  namespace: microservices
spec:
  host: service-b
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
